fixing alignment on CAP region map

--- a/app/assets/stylesheets/map_regions.scss
+++ b/app/assets/stylesheets/map_regions.scss
@@ -44,9 +44,13 @@
 @media (min-width: $screen-phone) {
   #keywords.tab-pane {
     display: flex; // child elements are table and div#regions_map
-
+    table.index_table {
+      
+      
+    }
     .index_name {
       white-space: nowrap;
+      vertical-align: top;
       a {
         padding: 0 .3em;
       }
